--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -60,7 +60,7 @@
         <!-- body部分 ここまで -->
       </p>
       <%=link_to "編集",edit_blog_path(@blog) %>
-      <a href="#">削除</a>
+      <%=link
       <div class="author-case">
         <div class="author-image"></div>
         <div class="author-box">
